<resources>
    <string-array name="travel_doc">
        <item>Malaysia IC-NRIC</item>
        <item>Passport-P</item>
        <item>Visa-V</item>
    </string-array>
    <string-array name="purpose">
        <item>Leisure</item>
        <item>Business</item>
    </string-array>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar </item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="full_month">
        <item>January</item>
        <item>February</item>
        <item>March </item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="requestType">
        <item>Please select</item>
        <item>Return</item>
        <item>Refund</item>
        <item>Other</item>
    </string-array>
    <string-array name="itemCondition">
        <item>Please select</item>
        <item>Opened</item>
        <item>Unopened</item>
    </string-array>
    <string-array name="filter_review">
        <item>SHR,Highest Rate</item>
        <item>SLR,Lowest Rate</item>
        <item>SNF,Newest First</item>
        <item>SOF,Oldest First</item>
    </string-array>
    <string-array name="filter_code">
        <item>SAZ,A to Z</item>
        <item>SZA,Z to A</item>
        <item>SOS,On Sale </item>
        <item>SLP,Lowest Price</item>
        <item>SHP,Highest Price</item>
        <item>SHR,Highest Rating</item>
    </string-array>
    <string-array name="filter">
        <item>A to Z</item>
        <item>Z to A</item>
        <item>On Sale</item>
        <item>Lowest Price</item>
        <item>Highest Price</item>
        <item>Highest Rating</item>
    </string-array>
    <string-array name="search_code">
        <item>STB,Brand,shopbybrand.ShopByBrandListView</item>
        <item>STM,Merchant,merchant.MerchantDetailView</item>
        <item>STD,Department,department.DepartmentView</item>
        <item>STP,Product,productprofile.ProductProfileView</item>
        <item>STD_LVL1,Department,department.
            View</item>
        <item>STD_LVL2,Department,department.DepartmentView</item>
        <item>STD_LVL3,Department,department.DepartmentView</item>
        <item>STD_LVL4,Department,department.DepartmentView</item>
    </string-array>
    <string name="google_map_api_key"><![CDATA[AIzaSyCK7VCGJomx5--fAPlvJZYGRsq4jyVyev0]]></string>
    <string name="imal_google_map_api_key"><![CDATA[AIzaSyBPg4DVdsfxlhmo_OT2_9iNVHSKK3OPBEA]]></string>
    <string name="app_name">Online Dating</string>
    <string name="welcome_to_firefly">Welcome to Firefly</string>
    <string name="beyond_convenience">Beyond Convenience</string>
    <string name="home_firefly_desc">access your booking,mobile check-in and manage flight by sign-in the system</string>
    <string name="home_manage_flight">MANAGE FLIGHT</string>
    <string name="home_book_flight">BOOK FLIGHT</string>
    <string name="home_mobile_check_in">MOBILE CHECK-IN</string>
    <string name="home_sign_in">SIGN-IN</string>
    <string name="home_boarding">Boarding Pass</string>
    <string name="firefly_stroke">/Firefly</string>
    <string name="firefly_airlines_stroke">/Firefly Airlines</string>
    <string name="home_book_flight_landscape">Book Flight</string>
    <string name="home_boarding_pass_landscape">Boarding Pass</string>
    <string name="home_manage_flight_landscape">Manage Flight</string>
    <string name="home_mobile_check_in_landscape">Mobile Check-In</string>
    <string name="home_boarding_pass">BOARDING PASS</string>
    <string name="home_description1">Dating Application for Muslim in Malaysia</string>
    <string name="home_description2">Already have an account? Login Now</string>
    <string name="home_login">LOG IN</string>
    <string name="home_register">REGISTER</string>
    <string name="login_enter_email">User ID (Email)</string>
    <string name="login_enter_password">Password</string>
    <string name="login_login_txt">LOG IN</string>
    <string name="login_register_txt">REGISTER</string>
    <string name="login_no_account">Don\'t have account yet?</string>
    <string name="title_login_and_password">LOGIN AND PASSWORD</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">FORGOT PASSWORD</string>
    <string name="forgot_password_email">USER ID (Email)</string>
    <string name="forgot_password_submitB">Submit</string>
    <string name="forgot_password_closeB">Close</string>
    <string name="title_activity_password_expired">PasswordExpiredActivity</string>
    <string name="password_expire_text">Your password has expired and needs to be changed. The password must consist of at least 8 characters, must include one upper case letter, one lower case letter, one numeric digit and one symbol. Example: SkyPark+123</string>
    <string name="create_title">CREATE ACCOUNT</string>
    <string name="create_hint_email">Email</string>
    <string name="create_hint_password">Password</string>
    <string name="create_hint_confirm_password">Confirm Password</string>
    <string name="create_password_hint">Password must be at least 8 characters, no more than 16 characters, must include at least one upper case letter, one lower case letter, one numeric digit, and one non-alphanumeric. The password cannot contain a period(.) comma(,) or tilde(~).</string>
    <string name="asterik">*</string>
    <string name="create_create_button">CREATE</string>
    <string name="title_profile">PROFILE</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_cmpassword">Confirm Password</string>
    <string name="profile_personal_information">PERSONAL INFORMATION</string>
    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_smoker">Smoker/Vaper</string>
    <string name="profile_religion">Religion</string>
    <string name="profile_residence_information">RESIDENCE INFORMATION</string>
    <string name="profile_country">Country</string>
    <string name="profile_state">State</string>
    <string name="profile_town">Town</string>
    <string name="profile_education_information">EDUCATION INFORMATION</string>
    <string name="profile_education">High Education</string>
    <string name="profile_occupation">Occupation</string>
    <string name="profile_status_information">STATUS INFORMATION</string>
    <string name="profile_maritial_status">Maritial Status</string>
    <string name="profile_children">Have children</string>
    <string name="profile_relationship_status">Relationship Status</string>
    <string name="profile_polygamy">Polygamy</string>
    <string name="profile_financial_level">Financial Level</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="smoker">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="state">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Melaka</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Pulau Pinang</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
        <item>Wilayah Persekutuan</item>
    </string-array>
    <string-array name="children">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="maritial_status">
        <item>Divorced</item>
        <item>Married</item>
        <item>Single</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="polygamy">
        <item>Agreed</item>
        <item>Can be discussed</item>
        <item>Do not agree</item>
        <item>Haven\'t thought yet</item>
    </string-array>
    <string-array name="relationship_status">
        <item>serius mencari</item>
        <item>tidak serius mencari</item>
        <item>sedang mengenali seseorang</item>
        <item>tidak pasti</item>
    </string-array>
    <string-array name="financial">
        <item>Not working</item>
        <item>Low income</item>
        <item>Middle income</item>
        <item>High income</item>
        <item>Need more information</item>
    </string-array>
    <string name="profile_submit_button">SUBMIT</string>
    <string name="expired_title">PASSWORD EXPIRED</string>
    <string name="expired_password_hint">Password must be at least 8 characters, no more than 16 characters, must include at least one upper case letter, one lower case letter, one numeric digit, and one non-alphanumeric. The password cannot contain a period(.) comma(,) or tilde(~).</string>
    <string name="expired_username">User ID(Email)</string>
    <string name="expired_current_password">Current Password</string>
    <string name="expired_new_password">New Password</string>
    <string name="expired_confirm_password">Confirm Password</string>
    <string name="expired_button">Continue</string>
    <string name="book_flight">BOOK FLIGHT</string>
    <string name="book_flight_one_way">ONE WAY</string>
    <string name="book_flight_return">RETURN</string>
    <string name="book_flight_departure_airport">DEPARTURE AIRPORT</string>
    <string name="book_flight_arrival_airport">ARRIVAL AIRPORT</string>
    <string name="book_flight_departure_date">DEPARTURE DATE</string>
    <string name="book_flight_arrival_date">RETURN DATE</string>
    <string name="book_flight_adult">Adult</string>
    <string name="book_flight_adult_year">2+ years old</string>
    <string name="book_flight_children">Children</string>
    <string name="book_flight_children_year">2+ years old</string>
    <string name="book_flight_infant">Infant</string>
    <string name="book_flight_infant_year"> 9 days - 2 years old</string>
    <string name="book_flight_availability">Sorry, no flights available. Please
select another date or station and try again.</string>
    <string name="book_flight_basic">BASIC</string>
    <string name="book_flight_premier">PREMIER</string>
    <string name="mobile_checkin">MOBILE CHECK-IN</string>
    <string name="manage_flight_na">No Flight Available</string>
    <string name="manage_flight">MANAGE FLIGHT</string>
    <string name="manage_flight_contact_email">Contact Email</string>
    <string name="manage_flight_confirmation_number">Confirmation Number</string>
    <string name="manage_flight_change_contact">CHANGE CONTACT</string>
    <string name="manage_flight_edit_passenger">EDIT PASSENGER</string>
    <string name="manage_flight_change_flight">CHANGE FLIGHT</string>
    <string name="manage_flight_change_seat">CHANGE SEAT</string>
    <string name="manage_flight_special_meal_request">SPECIAL MEAL REQUEST</string>
    <string name="manage_flight_add_payment">ADD PAYMENT</string>
    <string name="manage_flight_send_itinenary">SEND ITINERARY</string>
    <string name="manage_flight_contact_detail">CONTACT DETAIL</string>
    <string name="manage_flight_sent_itinenary">SEND ITINERARY</string>
    <string name="manage_flight_seat_optional">Seat Selection (Optional)</string>
    <string name="general_continue">Continue</string>
    <string name="general_email_addresss">Email Address</string>
</resources>