<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:padding="10dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:padding="10dp"
                            android:background="@drawable/home_desc">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_description1"
                                android:textColor="@color/black"
                                android:gravity="center"
                                android:fontFamily="Roboto"/>

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/home_description2"
                                android:textColor="@color/black"
                                android:gravity="center"
                                android:fontFamily="Roboto"/>

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/splash_logo"
                                android:layout_gravity="center"
                                android:padding="15dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <Button
                                    android:id="@+id/homeRegister"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home_login"
                                    android:paddingLeft="20dp"
                                    android:paddingRight="20dp"
                                    android:textColor="@color/white"
                                    android:textStyle="bold"
                                    android:background="@drawable/button_clicked"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp">
                                <Button
                                    android:id="@+id/homeLogin"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home_register"
                                    android:paddingLeft="30dp"
                                    android:paddingRight="30dp"
                                    android:textColor="@color/button_text"
                                    android:textStyle="bold"
                                    android:background="@drawable/button_clicked"/>
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>