<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:id="@+id/space" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/field_background"
                            android:clickable="true"
                            android:id="@+id/edit_area"
                            android:padding="10dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint=" *"
                                android:textColorHint="@color/red"
                                android:textColor="@color/red"
                                android:textStyle="bold"
                                android:id="@+id/textView395" />

                            <EditText
                                android:layout_marginLeft="3dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:background="@null"
                                android:hint="@string/login_enter_email"
                                android:textSize="@dimen/font17sp"
                                android:textColorHint="@color/hint_text"
                                android:id="@+id/txtLoginEmail"
                                android:tag="tagLoginEmail"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edit_area2"
                            android:padding="10dp"
                            android:background="@drawable/field_background">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint=" *"
                                android:textColorHint="@color/red"
                                android:textColor="@color/red"
                                android:textStyle="bold"
                                android:id="@+id/textView396" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/login_enter_password"
                                android:layout_marginLeft="3dp"
                                android:textSize="@dimen/font17sp"
                                android:imeOptions="actionDone"
                                android:textColorHint="@color/hint_text"
                                android:id="@+id/txtLoginPassword"
                                android:tag="tagLoginPassword"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp">

                            <Button
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/login_login_txt"
                                android:textColor="@color/button_text"
                                android:textStyle="bold"
                                android:id="@+id/btnLogin"
                                android:background="@drawable/button_clicked"/>

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            >

                            <TextView
                                android:layout_marginTop="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/login_forgot_password"
                                android:textColor="@color/dark_gray"
                                android:textSize="15dp"
                                android:id="@+id/txtForgotPassword"
                                android:layout_marginLeft="165dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <Button
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/login_register_txt"
                                android:id="@+id/registerBtn"
                                android:textColor="@color/button_text"
                                android:textStyle="bold"
                                android:background="@drawable/button_clicked"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>